@@ -1212,6 +1212,15 @@ The following table lists all possible return value shapes:
 @item yes                                  @tab @t{:final/circular} @tab @var{final-object}
 @end multitable
 
+@quotation Note
+This generic function may return more values in addition to the ones
+described above.  Clients may use this feature to communicate additional
+information between methods (@pxref{Parse result construction
+features}).  Client defined methods on this generic function should
+accept such additional values when calling next methods and themselves
+return the additional values.
+@end quotation
+
 The default method on this generic function is applicable to labeled
 object representations returned by the default methods on
 @t{note-labeled-object} and @t{make-labeled-object}.
@@ -1547,18 +1556,20 @@ and at least defining a method on the generic function
 
 When a client constructs parse results, some of the generic functions
 for customizing the behavior of the reader (@pxref{Reader behavior
-protocol}) return additional values:
+protocol}, @pxref{Labeled objects and references}) return additional
+values:
 
 @multitable @columnfractions .25 .15 .3 .3
-@headitem Generic function                       @tab Situation    @tab Ordinary values            @tab Extended values
+@headitem Generic function                       @tab Situation    @tab Ordinary values                   @tab Extended values
 
-@item @t{eclector.reader:call-as-top-level-read} @tab object       @tab @emph{object}              @tab @emph{object}, @emph{parse result}, @emph{orphan results}
-@item @t{eclector.reader:read-common}            @tab object       @tab @emph{object}              @tab @emph{object}, @emph{parse result}
-@item @t{eclector.reader:read-maybe-nothing}     @tab object       @tab @emph{object}, @emph{kind} @tab @emph{object}, @emph{kind}, @emph{parse result}
+@item @t{eclector.reader:call-as-top-level-read} @tab object       @tab @emph{object}                     @tab @emph{object}, @emph{parse result}, @emph{orphan results}
+@item @t{eclector.reader:read-common}            @tab object       @tab @emph{object}                     @tab @emph{object}, @emph{parse result}
+@item @t{eclector.reader:read-maybe-nothing}     @tab object       @tab @emph{object}, @emph{kind}        @tab @emph{object}, @emph{kind}, @emph{parse result}
 
-@item @t{eclector.reader:call-as-top-level-read} @tab end of input @tab @var{eof-value}            @tab @var{eof-value}, @emph{orphan results}
-@item @t{eclector.reader:read-common}            @tab end of input @tab @var{eof-value}            @tab @var{eof-value}
-@item @t{eclector.reader:read-maybe-nothing}     @tab end of input @tab @var{eof-value}, @t{:eof}  @tab @var{eof-value}, @t{:eof}
+@item @t{eclector.reader:call-as-top-level-read} @tab end of input @tab @var{eof-value}                   @tab @var{eof-value}, @emph{orphan results}
+@item @t{eclector.reader:read-common}            @tab end of input @tab @var{eof-value}                   @tab @var{eof-value}
+@item @t{eclector.reader:read-maybe-nothing}     @tab end of input @tab @var{eof-value}, @t{:eof}         @tab @var{eof-value}, @t{:eof}
+@item @t{eclector.reader:labeled-object-state}   @tab @emph{any}   @tab @emph{state}, @emph{final object} @tab @emph{state}, @emph{final object}, @emph{parse result}, @emph{inner labeled object}
 @end multitable
 
 Note how @t{eclector.reader:call-as-top-level-read} and
